--- a/bibliography/glossary.tex
+++ b/bibliography/glossary.tex
@@ -34,3 +34,4 @@
 \newacronym{cadd}{CADD}{Computer-aided drug discovery}
 \newacronym{hts}{HTS}{High Throughput Screening}
 \newacronym{qsar}{QSAR}{Quantitative Structure Activity Relation}
+\newacronym{rnn}{RNN}{Recursive Neural Network}
