--- a/bibliography/sample.bib
+++ b/bibliography/sample.bib
@@ -832,18 +832,6 @@ url = {http://dx.doi.org/10.1038/s41598-018-30044-1},
 volume = {8},
 year = {2018}
 }
-@article{Gooch2011,
-author = {Gooch, Jan W.},
-doi = {10.1007/978-1-4419-6247-8_14563},
-file = {:Users/anupadkh/Library/Application Support/Mendeley Desktop/Downloaded/Gooch - 2011 - Primary Structure(2).pdf:pdf},
-journal = {Encyclopedic Dictionary of Polymers},
-mendeley-groups = {Protein{\_}Drug{\_}Interaction/Protein-Protein Interaction},
-number = {5},
-pages = {917--917},
-title = {{Primary Structure}},
-volume = {17},
-year = {2011}
-}
 @article{Cao2012,
 abstract = {The identification of interactions between drugs and target proteins plays a key role in the process of genomic drug discovery. It is both consuming and costly to determine drug-target interactions by experiments alone. Therefore, there is an urgent need to develop new in silico prediction approaches capable of identifying these potential drug-target interactions in a timely manner. In this article, we aim at extending current structure-activity relationship (SAR) methodology to fulfill such requirements. In some sense, a drug-target interaction can be regarded as an event or property triggered by many influence factors from drugs and target proteins. Thus, each interaction pair can be represented theoretically by using these factors which are based on the structural and physicochemical properties simultaneously from drugs and proteins. To realize this, drug molecules are encoded with MACCS substructure fingerings representing existence of certain functional groups or fragments; and proteins are encoded with some biochemical and physicochemical properties. Four classes of drug-target interaction networks in humans involving enzymes, ion channels, G-protein-coupled receptors (GPCRs) and nuclear receptors, are independently used for establishing predictive models with support vector machines (SVMs). The SVM models gave prediction accuracy of 90.31{\%}, 88.91{\%}, 84.68{\%} and 83.74{\%} for four datasets, respectively. In conclusion, the results demonstrate the ability of our proposed method to predict the drug-target interactions, and show a general compatibility between the new scheme and current SAR methodology. They open the way to a host of new investigations on the diversity analysis and prediction of drug-target interactions. {\textcopyright} 2012 Elsevier B.V.},
 author = {Cao, Dong-Sheng and Liu, Shao and Xu, Qing-Song and Lu, Hong-Mei and Huang, Jian-Hua and Hu, Qian-Nan and Liang, Yi-Zeng},
@@ -1180,4 +1168,48 @@ title = {{The evolution of drug design at Merck Research Laboratories}},
 url = { http://link.springer.com/10.1007/s10822-016-9993-1},
 volume = {31},
 year = {2017}
+}
+@incollection{Choudhuri2014,
+abstract = {Bioinformatic analyses, to a large extent, are predicated upon sequence alignment and comparison. Sequence identity as revealed by sequence alignment also sheds light on the evolutionary relationship between two sequences. This chapter explores the concept of sequence identity and sequence homology. The misuse of the term sequence homology in common scientific parlance is discussed. Different aspects of sequence alignment, such as global versus local, and pairwise versus multiple sequence alignments are reviewed, with examples. Scoring matrices are also discussed, along with the statistical significance of sequence alignment. Lastly, BLAST and FASTA and different forms of BLAST are briefly discussed.},
+author = {Choudhuri, Supratim},
+booktitle = {Bioinforma. Beginners},
+doi = {10.1016/b978-0-12-410471-6.00006-2},
+file = {:Users/anupadkh/Downloads/choudhuri2014.pdf:pdf},
+mendeley-groups = {Books},
+pages = {133--155},
+publisher = {Elsevier},
+title = {{Sequence Alignment and Similarity Searching in Genomic Databases}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/B9780124104716000062},
+year = {2014}
+}
+@incollection{Gooch2011,
+address = {New York, NY},
+author = {Gooch, Jan W.},
+booktitle = {Encycl. Dict. Polym.},
+doi = {10.1007/978-1-4419-6247-8_14563},
+file = {:Users/anupadkh/Library/Application Support/Mendeley Desktop/Downloaded/Gooch - 2011 - Primary Structure(2).pdf:pdf},
+mendeley-groups = {Protein{\_}Drug{\_}Interaction/Protein-Protein Interaction},
+number = {5},
+pages = {917--917},
+publisher = {Springer New York},
+title = {{Primary Structure}},
+url = {http://link.springer.com/10.1007/978-1-4419-6247-8{\_}14563},
+volume = {17},
+year = {2011}
+}
+@article{Cock2009,
+abstract = {The Biopython Project is an international association of developers of freely available Python (http://www.python.org) tools for computational molecular biology. The web site http://www.biopython.org provides an online resource for modules, scripts, and web links for developers of Python-based software for life science research.},
+author = {Cock, P. J. A. and Antao, Tiago and Chang, Jeffrey T. and Chapman, Brad A. and Cox, Cymon J. and Dalke, Andrew and Friedberg, Iddo and Hamelryck, Thomas and Kauff, Frank and Wilczynski, Bartek and de Hoon, M. J. L.},
+doi = {10.1093/bioinformatics/btp163},
+file = {:Users/anupadkh/Downloads/btp163.pdf:pdf},
+issn = {1367-4803},
+journal = {Bioinformatics},
+mendeley-groups = {Protein{\_}Drug{\_}Interaction/Code{\_}Papers},
+month = {jun},
+number = {11},
+pages = {1422--1423},
+title = {{Biopython: freely available Python tools for computational molecular biology and bioinformatics}},
+url = {https://academic.oup.com/bioinformatics/article-lookup/doi/10.1093/bioinformatics/btp163},
+volume = {25},
+year = {2009}
 }
