--- a/mainmatter/1-Introduction/introduction.tex
+++ b/mainmatter/1-Introduction/introduction.tex
@@ -1,3 +1,4 @@
+\setcounter{page}{1}
 \chapter{Introduction}
 \section{Background}
 Treatment of diseases have mostly been associated with applying foreign medicinal components into human body. The rudimentary means of curing diseases has been growing with applied ayurbedas since the past. The chemical perspective of curing diseases slowly evolved into modern chemistry as drug facilities developed around the globe. The extensive research and documentation changed the world where people have come to trust fully in chemist's drugs to mitigate the ailments in the body. With the growing chemical status of the community, the need to develop better drugs and quick solutions is in high demand. The major reasons being the identification of new diseases and understanding the mechanism to cure such diseases.
@@ -15,7 +16,7 @@ Target Structure and Ligand Structures are the major parameters of the research.
 (52498, 254)
 180244
 \fi
-The Dataset scores the interaction of proteins and drugs based on Kb scores. We use 52498 drugs from CHEMBL and 254 proteins from UniProt to get an interaction of 180244, by removing the unrecognized interactions. The interactions are based on KIBA score, collected from KEGG(​Kyoto Encyclopedia of Genes and Genomes)​ dataset \cite{Kanehisa2000}.
+The Dataset contains scores of the interaction of proteins and drugs based on \acrshort{kiba} scores. We use 52498 drugs from CHEMBL and 254 proteins from UniProt to get an interaction of 180244, by removing the unrecognized interactions. The interactions are based on KIBA score, collected from KEGG(​Kyoto Encyclopedia of Genes and Genomes)​ dataset \cite{Kanehisa2000}.
 
 \iffalse
 
