--- a/configs.tex
+++ b/configs.tex
@@ -84,10 +84,21 @@
 
 %%%%%%%%%%%%%%%%% Caption
 \usepackage{caption}
-\captionsetup{%
-  font=footnotesize,% set font size to footnotesize
-  labelfont=bf % bold label (e.g., Figure 3.2) font
-}
+% \captionsetup{%
+%   font=footnotesize,% set font size to footnotesize
+%   labelfont=bf % bold label (e.g., Figure 3.2) font
+% }
+% \captionsetup{
+%    tablename=Table,
+%    listformat=empty,
+%    justification=justified,
+%    labelsep=quad,
+%    position=above,
+%    skip=\onelineskip,
+%    width=\linewidth,
+%    labelfont={small},
+%    font={small}
+% }
 \usepackage{array,booktabs}
 \usepackage{framed}
 \usepackage{float}
