--- a/frontmatter/5-acknowledges.tex
+++ b/frontmatter/5-acknowledges.tex
@@ -7,7 +7,7 @@ I pay my sincere gratitude Dr. Aman Shakya, to MSCSKE Coordinator for his superv
 
 I am highly grateful to Prof. Dr. Shashidhar Ram Joshi, Prof. Dr. Subarna Shakya, Dr. Sanjeeb Prasad Pandey, Dr. Dibakar Raj Pant and Dr. Basanta Joshi for their encouragement and guidance.
 
-I would like to express my heartily gratitude towards the \myinstitute, \mycampus along with all my respected teachers, my friends, my family for giving me continuous support for their invaluable help.
+I would like to express my heartily gratitude towards the \myinstitute, \mycampus ~along with all my respected teachers, my friends, my family for giving me continuous support for their invaluable help.
 
 
 {\bf{\theauthor}}
