--- a/main.tex
+++ b/main.tex
@@ -111,7 +111,8 @@
 \input{mainmatter/2-Development/development.tex}
 \input{mainmatter/3-Methodology/methodology.tex}
 \input{mainmatter/4-Results/results.tex}
-\input{mainmatter/5-Conclusion/conclusion.tex}
+% \input{mainmatter/5-Conclusion/conclusion.tex}
+\input{mainmatter/5-Conclusion/limitations.tex}
 
 % Backmatter
 
