--- a/bibliography/__latexindent_temp.tex
+++ b/bibliography/__latexindent_temp.tex
@@ -1,16 +1,10 @@
-@article{Cock2009,
-abstract = {The Biopython Project is an international association of developers of freely available Python (http://www.python.org) tools for computational molecular biology. The web site http://www.biopython.org provides an online resource for modules, scripts, and web links for developers of Python-based software for life science research.},
-author = {Cock, P. J. A. and Antao, Tiago and Chang, Jeffrey T. and Chapman, Brad A. and Cox, Cymon J. and Dalke, Andrew and Friedberg, Iddo and Hamelryck, Thomas and Kauff, Frank and Wilczynski, Bartek and de Hoon, M. J. L.},
-doi = {10.1093/bioinformatics/btp163},
-file = {:Users/anupadkh/Downloads/btp163.pdf:pdf},
-issn = {1367-4803},
-journal = {Bioinformatics},
-mendeley-groups = {Protein{\_}Drug{\_}Interaction/Code{\_}Papers},
-month = {jun},
-number = {11},
-pages = {1422--1423},
-title = {{Biopython: freely available Python tools for computational molecular biology and bioinformatics}},
-url = {https://academic.oup.com/bioinformatics/article-lookup/doi/10.1093/bioinformatics/btp163},
-volume = {25},
-year = {2009}
+@article{ozturk2018deepdta,
+  title={DeepDTA: deep drug--target binding affinity prediction},
+  author={{\"O}zt{\"u}rk, Hakime and {\"O}zg{\"u}r, Arzucan and Ozkirimli, Elif},
+  journal={Bioinformatics},
+  volume={34},
+  number={17},
+  pages={i821--i829},
+  year={2018},
+  publisher={Oxford University Press}
 }
