--- a/configs.tex
+++ b/configs.tex
@@ -53,8 +53,8 @@
 
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-% \fancyhead[LE,RO]{\textsl{\rightmark}}
-% \fancyhead[LO,RE]{\textsl{\leftmark}}
+\fancyhead[LE,RO]{\textsl{\rightmark}}
+\fancyhead[LO,RE]{\textsl{\leftmark}}
 
 
 \renewcommand{\chaptermark}[1]{%
@@ -131,3 +131,6 @@
 % \usepackage{footnote}
 % \usepackage{amsfonts}
 % \usepackage{svg}
+
+% Add figure and table
+\usepackage{chngcntr}
