--- a/tips.tex
+++ b/tips.tex
@@ -73,6 +73,7 @@ Use the website : https://www.tablesgenerator.com/
 
 \begin{table}[tb]
 	\centering
+	\caption{Characteristic parameters of the system}
 	\begin{tabular}{lll}
 		Parameter & Value & Units\\
 		\hline
