--- a/backmatter/appendix/appendix.tex
+++ b/backmatter/appendix/appendix.tex
@@ -1,11 +1,12 @@
+\begin{landscape}
 \appendix
-\chapter{R2RSRV}
+\chapter*{R2RSRV}
 \begin{table}[ht]
     \setlength{\tabcolsep}{1pt}\iffalse
     \begin{tabular}{p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}}
-        \fi
+        \fi \caption[]{R2RSRV Matrix}
         \begin{tabular}{ccccccccccccccccccccc}
-        \small \centering
+        \small \centering  
             &I&V&L&F&C&M&A&G&T&S&W&Y&P&H&E&Q&D&N&K&R\\
             I&5.21&2.42&0.88&1.71&-1.59&1.13&0.95&0.48&-1.05&-3.20&0.65&1.44&-0.82&-1.54&-0.94&-0.62&-1.66&-3.14&-2.23&-2.14\\
             V&2.42&9.46&1.33&0.49&-0.32&0.54&1.55&-2.12&-0.91&-1.80&-2.88&-1.05&-0.81&-1.32&-0.29&-0.58&-2.39&-3.69&0.66&-1.42\\
@@ -29,8 +30,8 @@
             R&-2.14&-1.42&0.19&-1.33&-0.84&-1.51&-2.74&1.22&-0.74&-0.38&4.08&-0.33&-0.40&-0.06&3.45&0.24&2.73&-0.43&-3.54&0.73
         
     \end{tabular}
-    \caption{R2RSRV Matrix}
     \label{table:r2r}
 \end{table}
+\end{landscape}
 
     
