--- a/bibliography/sample.bib
+++ b/bibliography/sample.bib
@@ -1213,3 +1213,13 @@ url = {https://academic.oup.com/bioinformatics/article-lookup/doi/10.1093/bioinf
 volume = {25},
 year = {2009}
 }
+@article{ozturk2018deepdta,
+  title={DeepDTA: deep drug--target binding affinity prediction},
+  author={{\"O}zt{\"u}rk, Hakime and {\"O}zg{\"u}r, Arzucan and Ozkirimli, Elif},
+  journal={Bioinformatics},
+  volume={34},
+  number={17},
+  pages={i821--i829},
+  year={2018},
+  publisher={Oxford University Press}
+}
