--- a/mainmatter/3-Methodology/system.tex
+++ b/mainmatter/3-Methodology/system.tex
@@ -179,7 +179,7 @@ The one-hot encodings of the drugs and protein sequences are inputs to this laye
 
 \subsubsection{Dense Layer}
 Dense Layer is a neural layer which fully connects the input layer to output layer. It can be used to learn the global pattern of the feature data. The representation can be seen from Figure ~\ref{fig:dense}.
-\include{mainmatter/3-Methodology/images/dense.tex}
+\input{mainmatter/3-Methodology/images/dense.tex}
 
 \subsubsection{Dropout Layer}
 Our model becomes undesirable when every component of the input layer makes a significant changes to the output layer. To reduce the effect of unimportant features we use dropout layer. Thus the backpropagation network tries to ignore the noise features and minimizes the unrealizable prediction of the learning problem. This can be expressed diagrammatically in the Figure ~\ref{fig:dropout}.
